   Include hidden triangles in BSP tree calculation, but don't render
      hidden triangles
   Change Hide Unselected so that it operates on the face level rather than
      face and vertex
   Show dimensions of selected geometry in context panel
   Added grid unit distance to status bar
   In MD3, use anim name + frame num for frame name on export
   Fix viewport drawing mode so that it is applied to loaded models
   Fix texture rendering after deleted textures (off by one on greater index)
   Fix to draw proper normals for ungrouped geometry in skeletal animations
   Fix to prevent selection of hidden faces when using the "ignore
      back-facing" option
   Fix broken shortcuts on geometry sub-menus
   Fix coverage build/autoconf
   Fix MD2 export (vertex/texture coord indices)
   Fix relative path to parent dir for textures in OBJ format
   Fix cursor, reset coords, and zoom on texture coordinates window
   Fix help links on Windows
   Fix several compilation warnings

Changes for 1.3.7
   Added "Apply to selected" for Transform Model
   Export Selected (geometry, joints, points, and textures)
   Set exact position of rotate point for rotate tool
   More complete version support for Cal3D (700 through 1200)
   Read compressed animations in Cal3D
   Report error if saving MD2 or MD3 with faces that are not assigned
      to a group
   Fix to dissallow primitives additions using subdivide or addPoint
   Fix interpolation bug where rotation was not taking the shortest
      path to the new orientation
   Have a minimum animation redraw of 20 fps to show interpolation on slow
      animations
   Performance fixes for normal calculation (about 40% speed improvement)
   Performance fixes for MD3 loading (about 8x speed improvement)
   Added --enable-profile to ./configure
   Added --language to override the system locale
   Prevent select connected from selecting hidden faces
   Do not perform selection in frame animation mode if there are no
      animations