@@ -231,7 +231,7 @@ void AnimExportWindow::accept()
    double duration = 0.0;
    double tm = 0.0;
 
-   double outfps = atof( m_frameRateValue->text().toUtf8() );
+   double outfps = m_frameRateValue->text().toDouble();
    if ( outfps < 0.0001 )
    {
       msg_warning( (const char *) tr("Must have more than 0 frames per second").toUtf8() );
@@ -241,12 +241,12 @@ void AnimExportWindow::accept()
 
    if ( m_timeButton->isChecked() )
    {
-      duration = atof( m_secondsValue->text().toUtf8() );
+      duration = m_secondsValue->text().toDouble();
    }
    else
    {
       duration = spf 
-         * atoi( m_iterationsValue->text().toUtf8() ) 
+         * m_iterationsValue->text().toInt()
          * m_model->getAnimFrameCount( mode, a );
    }
 
@@ -262,9 +262,9 @@ void AnimExportWindow::accept()
    {
       g_prefs( "ui_animexport_dir" ) = (const char *) path.toUtf8();
       g_prefs( "ui_animexport_format" ) = m_formatValue->currentIndex();
-      g_prefs( "ui_animexport_framerate" ) = atof( m_frameRateValue->text().toUtf8() );
-      g_prefs( "ui_animexport_seconds" ) = atoi( m_secondsValue->text().toUtf8() );
-      g_prefs( "ui_animexport_iterations" ) = atoi( m_iterationsValue->text().toUtf8() );
+      g_prefs( "ui_animexport_framerate" ) = m_frameRateValue->text().toDouble();
+      g_prefs( "ui_animexport_seconds" ) = m_secondsValue->text().toInt();
+      g_prefs( "ui_animexport_iterations" ) = m_iterationsValue->text().toInt();
 
       bool enable = m_model->setUndoEnabled( false );
 
