@@ -117,9 +117,9 @@ void ContextRotation::updateRotation()
 
       // Change model based on text field input
       double rad[3];
-      rad[0] = atof( m_xValue->text().toLatin1() );
-      rad[1] = atof( m_yValue->text().toLatin1() );
-      rad[2] = atof( m_zValue->text().toLatin1() );
+      rad[0] = m_xValue->text().toDouble();
+      rad[1] = m_yValue->text().toDouble();
+      rad[2] = m_zValue->text().toDouble();
 
       rad[0] = rad[0] * PIOVER180;
       rad[1] = rad[1] * PIOVER180;
