@@ -465,7 +465,7 @@ void TextureCoord::zoomOut()
 
 void TextureCoord::zoomChangeEvent()
 {
-   double zoom = atof( m_zoomInput->text().toLatin1() );
+   double zoom = m_zoomInput->text().toDouble();
    if ( zoom < 0.00001 )
    {
       zoom = 1;
